--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Nossa biblioteca do curso de JS com TDD na prática.",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*js",
+    "prepush": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/rgosch/js-com-tdd-na-pratica/issues"
   },
-  "homepage": "https://github.com/rgosch/js-com-tdd-na-pratica#readme"
+  "homepage": "https://github.com/rgosch/js-com-tdd-na-pratica#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "husky": "^0.14.3"
+  }
 }
