--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*js",
-    "prepush": "npm run lint",
+    "prepush": "npm run lint && npm run test:coverage",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm run test -- --watch",
     "test:coverge": "nyc npm run test"
   },
   "nyc": {
+    "functions": 80,
+    "line": 80,
+    "check-coverage": true,
     "reporter": ["text", "html"],
     "exclude": ["tests/**"]
   },
