--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepush": "npm run lint && npm run test:coverage",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "npm run test -- --watch",
-    "test:coverge": "nyc npm run test"
+    "test:coverage": "nyc npm run test"
   },
   "nyc": {
     "functions": 80,
