--- a/package.json
+++ b/package.json
@@ -6,7 +6,21 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*js",
     "prepush": "npm run lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
+    "test:tdd": "npm run test -- --watch",
+    "test:coverage": "nyc npm run test"
+  },
+  "nyc": {
+    "functions": 80,
+    "line": 80,
+    "check-coverage": true,
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,9 +39,14 @@
   },
   "homepage": "https://github.com/rgosch/js-com-tdd-na-pratica#readme",
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "mocha": "^5.2.0",
+    "nyc": "^12.0.2"
   }
 }
